# bois

./: .gitignore  .taplo.toml  Cargo.toml  DESIGN.md  Justfile  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yaml
.github/workflows/: book.yml  format.yml  lint.yml  package-binary.yml  test.yml
bois_dotfiles/: Cargo.toml
bois_dotfiles/src/: main.rs
bois_lib/: Cargo.toml
bois_lib/src/: args.rs  lib.rs
bois_lib/src/changeset/: state_to_state.rs  tree.rs
bois_lib/src/commands/: diff.rs  init.rs  mod.rs
bois_lib/src/handlers/paths/: file.rs  mod.rs
bois_lib/src/password_managers/: mod.rs  passwordstore.rs
bois_lib/src/state/: file_parser.rs  host.rs  mod.rs
bois_lib/src/ui/: mod.rs
bois_system/: Cargo.toml
book/: README.md  book.toml
book/src/: README.md  SUMMARY.md
book/src/guide/: bois_config.md  file_config.md  folder_config.md  group_config.md  host.md  host_config.md  installation.md  setup.md  templating.md
book/src/password_managers/: password_managers.md  passwordstore.md
book/src/system_configuration/: system_configuration.md
book/src/system_configuration/package_management/: package_management.md  pacman.md  paru.md
book/theme/: highlight.js
docs/: AUR.md  Design.md  Pacman.md  Paru.md
docs/Architecture/: Stages.md
docs/Password Managers/: Passwordstore.md
example/: bois.yml
example/groups/amd/: group.yml
example/groups/base/: group.yml
example/groups/base/systemd/: resolved.conf
example/groups/base/systemd/network/: 10-ethernet.network
example/groups/intel/: group.yml
example/groups/pc/: group.yml
example/hosts/NASboi/: host.yml  vars.yaml
example/hosts/amd_machine/: host.yml
example/hosts/fastboi/: host.yml  vars.yml
example/hosts/intel_lenovo/: lenovo_fix.conf
example/hosts/my_old_potato/: host.yml  vars.yml
src/: args.rs  changeset.rs  cli.rs  config.rs  constants.rs  error.rs  file.rs  file_config.rs  group_config.rs  helper.rs  lib.rs  main.rs  system_state.rs  templating.rs
src/aggregators/: group.rs  host.rs  mod.rs
src/aggregators/package_managers/: mod.rs  pacman.rs  paru.rs
src/aggregators/path/: directory.rs  file.rs  file_parser.rs
src/changeset/: compiled_state.rs  helper.rs  host_to_state.rs  mod.rs  state_to_host.rs  state_to_state.rs  tree.rs
src/commands/: deploy.rs  diff.rs  init.rs  mod.rs
src/config/: bois.rs  directory.rs  file.rs  group.rs  helper.rs  host.rs  mod.rs
src/handlers/: mod.rs
src/handlers/paths/: directory.rs  file.rs  mod.rs
src/handlers/services/: mod.rs
src/parser/: mod.rs  syntax.pest
src/password_managers/: passwordstore.rs
src/rendered/: state.rs
src/state/: directory.rs  file.rs  file_parser.rs  group.rs  host.rs  mod.rs  state.rs
src/state/parser/: mod.rs  syntax.pest
src/state/path/: file.rs  tree.rs
src/subcommands/: init.rs
src/templating/: file.rs  mod.rs  prerender_state.rs  variables.rs
src/ui/: mod.rs
templates/dotfiles/: bois.yml  host.yml
templates/system/: bois.yml  group.yml  host.yml
tests/file_parser/: mod.rs
tests/file_parser/input/: block_at_end  block_at_start  block_in_middle  block_with_empty_lines  no_block
tests/file_parser/snapshots/: tests__file_parser__block_at_end_0_pre_content.snap  tests__file_parser__block_at_end_1_config.snap  tests__file_parser__block_at_start_1_config.snap  tests__file_parser__block_at_start_2_post_content.snap  tests__file_parser__block_in_middle_0_pre_content.snap  tests__file_parser__block_in_middle_1_config.snap  tests__file_parser__block_in_middle_2_post_content.snap  tests__file_parser__block_with_empty_lines_1_config.snap  tests__file_parser__block_with_empty_lines_2_post_content.snap  tests__file_parser__no_block_0_pre_content.snap
